xfree86: handle missing Screen lines in the ServerLayout #16301

If no Screen is specified in the ServerLayout section, either take the first
one from the config file or autogenerate a default screen.

X.Org Bug 16301 <http://bugs.freedesktop.org/show_bug.cgi?id=16301>